# aguvis

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.md  pyproject.toml  train.py
data/: download_hf.py  stage1.yaml  stage2.yaml
scripts/: kill.sh  run.sh  train.sh  train_stage2.sh  zero2.json  zero3.json
src/aguvis/: constants.py  dataset.py  trainer.py
src/aguvis/serve/: cli.py
